[MM-204] Fixed issues/enhancements in link tooltip component 1. Removed the "see more" link. 2. Fixed branch name overflow. 3. Added limit to title and description. 4. Displayed proper icon for a closed PR. 5. Updated the icons to match with the icons on gitlab.com.

--- a/webapp/src/components/link_tooltip/tooltip.css
+++ b/webapp/src/components/link_tooltip/tooltip.css
@@ -121,4 +121,6 @@
     background-color: var(--light-blue);
     border-radius: 3px;
     max-width: 140px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
